added css and js files

--- a/front.html
+++ b/front.html
@@ -24,6 +24,6 @@
     <h3>humidity</h3>
     <p id="humidity">humidity: </p>
   </div>
-<script src="nithin.js"> </script>
+<script src="api.js"> </script>
 </body>
 </html>
